--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse  " id="navbarSupportedContent">
               <ul class="navbar-nav mx-lg-5 mb-2 mb-lg-0 gap-lg-5 raleway fw-bold ">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./about.html">About Us</a>
