adjusted all pages

--- a/about.html
+++ b/about.html
@@ -122,10 +122,10 @@
           <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
               <h1 class="mb-5 garamond sec-text-col">FEATURED COURSES</h1>
               <div class="tab-class text-center pricing wow fadeInUp" data-wow-delay="0.1s">
-                <ul class="nav nav-pills d-inline-flex justify-content-center sec-bg-col rounded-pill mb-5">
+                <ul class="nav nav-pills d-inline-flex justify-content-center bg-black text-white rounded-pill mb-5">
                     <li class="nav-item">
                         <button
-                            class="nav-link active rounded-pill"
+                            class="nav-link active rounded-pill text-white"
                             data-bs-toggle="pill"
                             href="#tab-1">
                             Small Package
@@ -133,7 +133,7 @@
                     </li>
                     <li class="nav-item">
                         <button
-                            class="nav-link rounded-pill"
+                            class="nav-link rounded-pill text-white"
                             data-bs-toggle="pill"
                             href="#tab-2"
                         >
