--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
       </section>
       <section class="swipper-page my-5 py-5">
-        <div class="container-fluid my-5">
+        <div class="container my-5">
           <div class="swiper sample-slider my-5">
             <div class="swiper-wrapper my-5">
                 <div class="swiper-slide"><p class="garamond fst-italic display-4 text-center py-5">"[Bite] is a on a mission to become the world’s most sustainable oral care company by completely revolutionizing the industry."</p></div>
