--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
         </nav>
      </div>
     </header>
-    <section class="hero-section-bg fd-flex flex-column " data-aos="fade-up" data-aos-delay="100">
+    <section class="portfolio-hero-page fd-flex flex-column " data-aos="fade-up" data-aos-delay="100">
       <div class="hero-section-content position-absolute text-center ms-5" >
         <div class="hero-page-text d-flex justify-content-start align-items-center flex-column text-center py-5">
           <h1 class="text-center  display-3 fw-bolder garamond">Anything <i>but </i>but routine.</h1>
